--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.14.2",
-    "node-polyfill-webpack-plugin": "^4.0.0"
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "process": "^0.11.10"
   }
 }
